--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="img"><img class="avatar" src="./imgs/me.jpg" alt="Photo"></div>
           
           <div class="text info">
-            <p>I am a researcher at Shanghai AI Lab. I got my Ph.D. degree from Multimedia Lab, the Chinese University of Hong Kong in 2021. During my Ph.D. period, I was supervised by Hongsheng Li and Xiaogang Wang. I was luckily to be involved in internship program at Boston MERL, Microsoft Seattle, AI2 and Sensetime during my Ph.D. time. My research interestes lie in Multi-modality Learning, Efficient Visual Backbone design, Self-supervised Representation Learning. 
+            <p>I am a researcher at Shanghai AI Lab. I got my Ph.D. degree from Multimedia Lab, the Chinese University of Hong Kong in 2021. During my Ph.D. period, I was supervised by Xiaogang Wang and Xiaogang Wang. I was luckily to be involved in internship program at MERL Boston, Microsoft Seattle, AI2 Seattle and Sensetime Beijing/Shenzhen during my Ph.D. time. My research interestes lie in multi-modality Learning, efficient visual backbone design, self-supervised representation learning. 
                <br><br>
                If you are interested in research intern, research engineer, full-time researcher at Shanghai AI lab or Ph.D. program of MMLAB at CUHK. Please send me an email. 
             </p>
