--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <div>
                   <span class="venue">Arxiv 2021</span> /
                   <span class="tag"><a href="https://arxiv.org/pdf/2106.02242.pdf">Paper</a></span> /
-                  <span class="tag"><a href="https://github.com/gaopengcuhk/SMCA-DETR">Code</a></span>
+                  <span class="tag"><a href="https://openreview.net/attachment?id=qfkz7wHXKC&name=supplementary_material">Code</a></span>
                 </div>
                 <br>
               </div>
