--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 </div>
                 <div>
                   <span class="venue">ACMMM 2021</span> /
-                  <span class="tag"><a href="https://arxiv.org/pdf/2109.11778.pdf">Paper</a></span> / 
+                  <span class="tag"><a href="https://arxiv.org/pdf/2109.11778.pdf">Paper</a></span>
                 </div>
                 <br>
               </div>
@@ -229,7 +229,7 @@
                 </div>
                 <div>
                   <span class="venue">AAAI 2021</span> /
-                  <span class="tag"><a href="https://arxiv.org/pdf/2007.03848.pdf">Paper</a></span> / 
+                  <span class="tag"><a href="https://arxiv.org/pdf/2007.03848.pdf">Paper</a></span>
                 </div>
                 <br>
               </div>
@@ -285,7 +285,7 @@
                 </div>
                 <div>
                   <span class="venue">ICCV 2019</span> /
-                  <span class="tag"><a href="https://arxiv.org/abs/1908.04289.pdf">Paper</a></span> /
+                  <span class="tag"><a href="https://arxiv.org/abs/1908.04289.pdf">Paper</a></span>
                 </div>
                 <br>
               </div>
