--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
           <div class="text">
             <h2 style="margin-bottom:.5em">News</h2>
             <ul style="padding-bottom:1em">
+              <li><strong>[10/2021]</strong> Attempts to replicate interesting paper Pix2Seq is released at <a href="https://github.com/gaopengcuhk/Unofficial-Pix2Seq" target="_blank">Unoffical Pix2Seq</a>.</li>
               <li><strong>[10/2021]</strong> Two paper are accepted by <a href="https://nips.cc/Conferences/2021" target="_blank">NeuIPS 2021</a>.</li>
               <li><strong>[07/2021]</strong> One paper is accepted by <a href="http://iccv2021.thecvf.com/home/" target="_blank">ICCV 2021</a>.</li>
               <li><strong>[06/2021]</strong> One paper is accepted by <a href="https://2021.acmmm.org/" target="_blank">ACMMM 2021</a>.</li>
