--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1>Peng Gao</h1>
             <p>
             </p>
-            <div>Researcher</div>
+            <div>Young Scientist</div>
             <div>Shanghai AI Lab</div>
             <div>Email:&nbsp;gaopeng [at] pjlab (dot) org (dot) cn</div>
             <p>
