--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
                   <span class="author">Hongsheng Li</span>,
                   <span class="author">Shuang Li</span>,
                   <span class="author">Pan Lu</span>,
-                  <span class="author">Yikang Li</span>，
-                  <span class="author">Steven C.H. Hoi</span>，
+                  <span class="author">Yikang Li</span>,
+                  <span class="author">Steven C.H. Hoi</span>,
                   <span class="author">Xiaogang Wang</span>
                 </div>
                 <div>
