--- a/index.html
+++ b/index.html
@@ -109,6 +109,29 @@
             </div>            
             
             <div class="publication">
+              <div class="img"><img class="img_responsive" src="./imgs/container.jpg" alt="autoassign"></div>
+              <div class="text">
+                <div class="title">CLIP-Adapter: Better Vision-Language Models with Feature Adapters</div>
+                <div class="authors">
+                  <span class="author jw">Peng Gao*</span>,
+                  <span class="author">Shijie Geng*$</span>,
+                  <span class="author">Renrui Zhang*</span>,
+                  <span class="author">Teli Ma</span>,
+                  <span class="author">Rongyao Fang</span>,
+                  <span class="author">Yongfeng Zhang</span>,
+                  <span class="author">Hongsheng Li</span>,
+                  <span class="author">Yu Qiao</span>,
+                </div>
+                <div>
+                  <span class="venue">Arxiv 2021</span> /
+                  <span class="tag"><a href="https://arxiv.org/pdf/2106.01401.pdf">Paper</a></span> /
+                  <span class="tag"><a href="https://github.com/gaopengcuhk/CLIP-Adapter">Code</a></span>
+                </div>
+                <br>
+              </div>
+            </div>   
+            
+            <div class="publication">
               <div class="img"><img class="img_responsive" src="./imgs/smca.jpg" alt="autoassign"></div>
               <div class="text">
                 <div class="title">Fast Convergence of DETR with Spatially Modulated Co-attention</div> 
