--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>            
             
             <div class="publication">
-              <div class="img"><img class="img_responsive" src="./imgs/clip_adapter.jpg" alt="autoassign"></div>
+              <div class="img"><img class="img_responsive" src="./imgs/clip_adaptor.jpg" alt="autoassign"></div>
               <div class="text">
                 <div class="title">CLIP-Adapter: Better Vision-Language Models with Feature Adapters</div>
                 <div class="authors">
