--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
                 <div>
                   <span class="venue">Arxiv 2021</span> /
-                  <span class="tag"><a href="https://arxiv.org/pdf/2106.01401.pdf">Paper</a></span> /
+                  <span class="tag"><a href="https://github.com/gaopengcuhk/CLIP-Adapter/blob/main/Adapter.pdf">Paper</a></span> /
                   <span class="tag"><a href="https://github.com/gaopengcuhk/CLIP-Adapter">Code</a></span>
                 </div>
                 <br>
