--- a/index.html
+++ b/index.html
@@ -204,12 +204,14 @@
                 <div class="authors">
                   <span class="author">Minghang Zeng</span>,
                   <span class="author jw">Peng Gao</span>,
+                  <span class="author">Renrui Zhang</span>,
+                  <span class="author">Kunchang Li</span>,
                   <span class="author">Xiaogang Wang</span>,
                   <span class="author">Hongsheng Li</span>, 
                   <span class="author">Dong Hao</span>, 
                 </div>
                 <div>
-                  <span class="venue">Arxiv 2021</span> /
+                  <span class="venue">BMVC 2021 Oral</span> /
                   <span class="tag"><a href="https://arxiv.org/pdf/2011.09315.pdf">Paper</a></span> /
                   <span class="tag"><a href="https://github.com/gaopengcuhk/SMCA-DETR">Code</a></span>
                 </div>
