--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
           <div class="text">
             <h2 style="margin-bottom:.5em">News</h2>
             <ul style="padding-bottom:1em">
+              <li><strong>[11/2021]</strong> Vision team at Shanghai AI Lab realeased Tip-Adaptor on <a href="https://arxiv.org/" target="_blank">Arxiv</a>.</li>
               <li><strong>[10/2021]</strong> Vision team at Shanghai AI Lab realeased CLIP-Adaptor on <a href="https://arxiv.org/" target="_blank">Arxiv</a>.</li>
               <li><strong>[10/2021]</strong> Attempts to replicate interesting paper Pix2Seq is released at <a href="https://github.com/gaopengcuhk/Unofficial-Pix2Seq" target="_blank">Unoffical Pix2Seq</a>.</li>
               <li><strong>[10/2021]</strong> Two paper are accepted by <a href="https://nips.cc/Conferences/2021" target="_blank">NeuIPS 2021</a>.</li>
