--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   <span class="author">Renrui Zhang*</span>,
                   <span class="author">Rongyao Fang*</span>,
                   <span class="author">Wei Zhang*</span>,
-                  <span class="author jw">Peng Gao$</span>,
+                  <span class="author jw">Peng Gao**</span>,
                   <span class="author">Kunchang Li</span>,
                   <span class="author">Jifeng Dai</span>,
                   <span class="author">Yu Qiao</span>,
