--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
           <div class="text">
             <h2 style="margin-bottom:.5em">News</h2>
             <ul style="padding-bottom:1em">
+              <li><strong>[01/2022]</strong> PointCLIP accepted by <a href="https://cvpr2022.thecvf.com/" target="_blank">CVPR 2022</a>.</li>
+              <li><strong>[01/2022]</strong> A strong image and video Backbone Uniformer accepted by <a href="https://iclr.cc/" target="_blank">ICLR2022</a>.</li>
               <li><strong>[11/2021]</strong> Vision team at Shanghai AI Lab realeased Tip-Adaptor on <a href="https://arxiv.org/" target="_blank">Arxiv</a>.</li>
               <li><strong>[10/2021]</strong> Vision team at Shanghai AI Lab realeased CLIP-Adaptor on <a href="https://arxiv.org/" target="_blank">Arxiv</a>.</li>
               <li><strong>[10/2021]</strong> Attempts to replicate interesting paper Pix2Seq is released at <a href="https://github.com/gaopengcuhk/Unofficial-Pix2Seq" target="_blank">Unoffical Pix2Seq</a>.</li>
