--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
               <h3 style="margin-bottom:0em">
                 2022
               </h3>
-              
+            </div>
+
               
             </div>
              <div class="publication">
