--- a/index.html
+++ b/index.html
@@ -92,6 +92,32 @@
                 2022
               </h3>
 
+
+              
+            </div>
+             <div class="publication">
+              <div class="img"><img class="img_responsive" src="./imgs/pointclip.png" alt="autoassign"></div>
+              <div class="text">
+                <div class="title">PointCLIP: Point Cloud Understanding by CLIP</div>
+                <div class="authors">
+                  <span class="author">Renrui Zhang*</span>,
+                  <span class="author">Ziyu Guo*</span>,
+                  <span class="author">Wei Zhang</span>,
+                  <span class="author">Kunchang Li</span>,
+                  <span class="author">Xupeng Miao</span>,
+                  <span class="author">Bin Cui</span>,
+                  <span class="author">Yu Qiao</span>,
+                  <span class="author jw">Peng Gao**</span>,
+                  <span class="author">Hongsheng Li</span>,
+                </div>
+                <div>
+                  <span class="venue">CVPR 2022</span> /
+                  <span class="tag"><a href="https://arxiv.org/pdf/2112.02413.pdf">Paper</a></span> /
+                  <span class="tag"><a href="https://github.com/ZrrSkywalker/PointCLIP">Code</a></span>
+                </div>
+                <br>
+              </div>
+            </div>    
               
 
             </div>
