--- a/index.html
+++ b/index.html
@@ -92,7 +92,30 @@
                 2022
               </h3>
 
-
+            </div>
+             <div class="publication">
+              <div class="img"><img class="img_responsive" src="./imgs/point_m2ae.png" alt="autoassign"></div>
+              <div class="text">
+                <div class="title">Point-M2AE: Multi-scale Masked Autoencoders for Hierarchical Point Cloud Pre-training</div>
+                <div class="authors">
+                  <span class="author">Renrui Zhang</span>,
+                  <span class="author">Ziyu Guo</span>,
+                  <span class="author jw">Peng Gao</span>,
+                  <span class="author">Rongyao Fang</span>,
+                  <span class="author">Bin Zhao</span>,
+                  <span class="author">Dong Wang</span>,
+                  <span class="author">Yu Qiao</span>,
+                  <span class="author">Hongsheng Li</span>,
+                </div>
+                <div>
+                  <span class="venue">Arxiv 2022</span> /
+                  <span class="tag"><a href="https://arxiv.org/pdf/2205.03892.pdf">Paper</a></span> /
+                  <span class="tag"><a href="https://github.com/ZrrSkywalker/Point-M2AE">Code</a></span>
+                </div>
+                <br>
+              </div>
+            </div>   
+              
               
             </div>
              <div class="publication">
