--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
                 2022
               </h3>
 
+
             </div>
              <div class="publication">
-              <div class="img"><img class="img_responsive" src="./imgs/convmae.png" alt="autoassign"></div>
+              <div class="img"><img class="img_responsive" src="./imgs/point_m2ae.png" alt="autoassign"></div>
               <div class="text">
                 <div class="title">ConvMAE: Masked Convolution Meets Masked Autoencoders</div>
                 <div class="authors">
@@ -112,7 +113,7 @@
                 </div>
                 <br>
               </div>
-            </div>    
+            </div>   
               
               
             </div>
