--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="authors">
                   <span class="author jw">Peng Gao</span>,
                   <span class="author">Teli Ma</span>,
-                  <span class="author jw">Hongsheng Li</span>,
+                  <span class="author">Hongsheng Li</span>,
                   <span class="author">Ziyi Zhang</span>,
                   <span class="author">Jifeng Dai</span>,
                   <span class="author">Hongsheng Li</span>,
