--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
           <div class="text">
             <h2 style="margin-bottom:.5em">News</h2>
             <ul style="padding-bottom:1em">
-              <li><strong>[09/2022]</strong> Three paper (ConvMAE, Point-M2AE, QViT) are accepted by <a href="https://nips.cc/ target="_blank">NeuIPS 2022</a>.</li>
+              <li><strong>[03/2023]</strong> Five paper (Cafo, Maskalign, I2P-MAE, Q-DETR, Point-NN) are accepted by <a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2023</a>.</li>
+              <li><strong>[09/2022]</strong> Three paper (ConvMAE, Point-M2AE, QViT) are accepted by <a href="https://nips.cc/" target="_blank">NeuIPS 2022</a>.</li>
               <li><strong>[06/2022]</strong> Five paper(1 oral, 4 poster) are accepted by <a href="https://eccv2022.ecva.net/" target="_blank">ECCV 2022</a>.</li>
               <li><strong>[05/2022]</strong> Vision team at Shanghai AI Lab realeased <a href="https://github.com/Alpha-VL/ConvMAE/" target="_blank">ConvMAE, FastConvMAE and VideoConvMAE</a>.</li>
               <li><strong>[01/2022]</strong> PointCLIP accepted by <a href="https://cvpr2022.thecvf.com/" target="_blank">CVPR 2022</a>.</li>
